--- a/main.yml
+++ b/main.yml
@@ -13,3 +13,4 @@
     - include: tasks/ansible-setup.yml
     - include: tasks/preferences.yml
     - include: tasks/oxomi.yml
+    - include: tasks/basic.yml
