--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,52 +1,11 @@
 ---
-downloads: ~/.ansible-downloads/
-
-configure_sudoers: yes
-
-#TODO: dotfiles
-
-homebrew_installed_packages:
-  - wget
-  - ghostscript
-  - git
-  - freetype
-  - graphicsmagick
-  - swftools
-  - ffmpeg
-  - jpeg
-  - libpng
-  - libav
-  - ansible
-  - boot2docker
-  - docker
-  - go
-  - iperf
-  - python
-  - npm
-  - openssl
-  - wrk
-
-homebrew_taps:
-  - caskroom/cask
-  - homebrew/binary
-  - homebrew/dupes
-  - homebrew/versions
-
-homebrew_cask_appdir: /Applications
-homebrew_cask_apps:
+brew_cask_apps:
   - firefox
   - google-chrome
-  - atom #Texteditor made by github
-  - keepingyouawake #opensource caffeine clone
-  - intellij-idea
-  - slack
+  - atom
+  - visual-studio-code
   - 1password
-  - sourcetree
-  - adobe-reader
   - cyberduck
-  - dropbox
-  - flux
   - libreoffice
-  - launchrocket
-  - appcleaner
-  - kdiff3
+  - tunnelblick
+
