--- a/main.yml
+++ b/main.yml
@@ -9,3 +9,4 @@
     - include: tasks/base_packages.yml
     - include: tasks/memoio.yml
     - include: tasks/teamviewer13.yml
+    - include: tasks/ssh.yml
