add bash/bash completion; update-ssh-config; sign-keys script for hildeguard

--- a/develop.yml
+++ b/develop.yml
@@ -6,5 +6,4 @@
   vars_files:
     - vars/develop.yml
   tasks:
-    - include: tasks/base_packages.yml
-    - include: tasks/develop.yml
+    - include: tasks/bash.yml
