--- a/main.yml
+++ b/main.yml
@@ -7,6 +7,7 @@
     - vars/main.yml
   tasks:
     - include: tasks/base_packages.yml
+    - include: tasks/bash.yml
     - include: tasks/memoio.yml
     - include: tasks/teamviewer13.yml
     - include: tasks/ssh.yml
