--- a/develop.yml
+++ b/develop.yml
@@ -6,4 +6,5 @@
   vars_files:
     - vars/develop.yml
   tasks:
-    - include: tasks/bash.yml
+    - include: tasks/base_packages.yml
+    - include: tasks/develop.yml
