--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -6,6 +6,11 @@
     dest: /usr/local/bin/update-ssh-config
     mode: 0755
 
+- name: "install default empty file config.footer"
+  file:
+    path: ~/.ssh/config.footer
+    state: touch
+
 - name: "install script to query sign ssh keys via hildeguard"
   copy:
     src: ssh/sign-keys
