useage of dockutil

--- a/main.yml
+++ b/main.yml
@@ -11,4 +11,5 @@
     - include: tasks/memoio.yml
     - include: tasks/teamviewer14.yml
     - include: tasks/ssh.yml
+    - include: tasks/dockutil.yml
     - include: tasks/timemachine.yml
