grather facts; use fact to exclude directory

--- a/tasks/timemachine.yml
+++ b/tasks/timemachine.yml
@@ -1,6 +1,6 @@
 ---
 
 - name: "exclude Downloads directory from timemachine backup"
-  command: tmutil addexclusion -p ~/Downloads
+  command: "tmutil addexclusion -p {{ ansible_user_dir }}/Downloads"
   become: yes
   become_method: sudo
