--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -4,12 +4,16 @@
   file:
     path: /usr/local/bin
     state: directory
+  become: yes
+  become_method: sudo
 
 - name: "install script to query ssh config"
   copy:
     src: ssh/update-ssh-config
     dest: /usr/local/bin/update-ssh-config
     mode: 0755
+  become: yes
+  become_method: sudo
 
 - name: "install .ssh directory for user"
   file:
@@ -26,3 +30,5 @@
     src: ssh/sign-keys
     dest: /usr/local/bin/sign-keys
     mode: 0755
+  become: yes
+  become_method: sudo
