--- a/tasks/dockutil.yml
+++ b/tasks/dockutil.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: remove apple stuff from dock
-  command: /usr/local/bin/dockutil --remove "{{ item }}"
+  command: /opt/homebrew/bin/dockutil --remove "{{ item }}"
   loop:
     - Siri
     - TV
