--- a/main.yml
+++ b/main.yml
@@ -5,6 +5,6 @@
   vars_files:
     - vars/main.yml
   tasks:
-    - include: tasks/base_packages.yml
-    - include: tasks/bash.yml
-    - include: tasks/ssh.yml
+    - include_task: tasks/base_packages.yml
+    - include_task: tasks/bash.yml
+    - include_task: tasks/ssh.yml
