--- a/develop.yml
+++ b/develop.yml
@@ -6,5 +6,5 @@
   vars_files:
     - vars/develop.yml
   tasks:
-    - include_task: tasks/base_packages.yml
-    - include_task: tasks/develop.yml
+    - include_tasks: tasks/base_packages.yml
+    - include_tasks: tasks/develop.yml
