--- a/sales.yml
+++ b/sales.yml
@@ -6,4 +6,4 @@
   vars_files:
     - vars/sales.yml
   tasks:
-    - include_task: tasks/base_packages.yml
+    - include_tasks: tasks/base_packages.yml
